// [python quickstart](https://grpc.io/docs/quickstart/python.html#run-a-grpc-application)
// python -m grpc_tools.protoc --python_out=. --grpc_python_out=. -I. helloworld.proto

// helloworld.proto
syntax = "proto3";

package rpc_package;

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
    rpc SayHelloAgain(AgainRequest) returns (AgainReply) {}
}

message HelloRequest {
    string name = 1;
}

message AgainRequest {
    string city = 1;
}

message HelloReply {
    string message = 1;
}

message AgainReply {
    string message = 1;
}